# stl_to_h5m

./: .gitignore  CITATION.cff  README.md  conda_build.sh  conda_build_config.yaml  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: anaconda-publish.yml  ci_with_install.yml  conda_publish.yml
conda/: meta.yaml
src/stl_to_h5m/: core.py
stl_to_h5m/: __init__.py  core.py
tests/: part1.stl  part2.stl  test_python_api.py  test_version.py
