[build-system]
requires = ["setuptools >= 65.4.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "stl_to_h5m"
authors = [
  { name="Jonathan Shimwell", email="mail@jshimwell.com" },
]
license = {file = "LICENSE.txt"}
description = "Converts STL files to a DAGMC h5m file using PyMoab"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dagmc", "geometry", "plot", "slice"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.1",
]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "src/stl_to_h5m/_version.py"


[project.optional-dependencies]
tests = [
    "pytest",
    "dagmc_h5m_file_inspector"
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/stl_to_h5m"
"Bug Tracker" = "https://github.com/fusion-energy/stl_to_h5m/issues"

[tool.setuptools]
package-dir = {"" = "src"}
