[metadata]
name = stl_to_h5m
author = The stl_to_h5m Development Team
author_email = mail@jshimwell.com
description = Converts STL files to a DAGMC h5m file using PyMoab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/stl_to_h5m
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/stl_to_h5m
    Tracker = https://github.com/fusion-energy/stl_to_h5m/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1

[options.extras_require]
tests = 
    pytest >= 5.4.3

[flake8]
per-file-ignores = __init__.py:F401
